# Laboratory

./: .gitignore  pyproject.toml  run.py
Лабораторна №1/: main.py
Лабораторна №2/: main.py
Лабораторна №3/: main.py
Лабораторна №4/: main.py
Лабораторна №5/: main.py
Лабораторна №6/: main.py
